--- a/templates/nginx/src/core/nginx.h.erb
+++ b/templates/nginx/src/core/nginx.h.erb
@@ -9,8 +9,8 @@
 #define _NGINX_H_INCLUDED_
 
 
-#define nginx_version      1007002
-#define NGINX_VERSION      "1.7.2"
+#define nginx_version      <%= @nginx_version.gsub('\.', '00') %>
+#define NGINX_VERSION      "<%= @nginx_version %>"
 #define NGINX_VER          "<%= @server_name %>/" NGINX_VERSION ".1"
 
 #ifdef NGX_BUILD
